[package]
name = "rust_os"
version = "0.1.0"
authors = ["James Tan <james_tan97@outlook.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
# Mutex without std library
spin = "0.5.2"
volatile = "0.2.6"

# Crate to allow us to lazily initiate static variables,
# allowing initialization to occur at runtime
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] # Since we do not link the standard lib

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

